sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:10: error: ':' expected but ')' found.
def trouverBig(c){
                ^BasicPancake:26: error: identifier expected but '}' found.
}
^